# testgit

./: LICENSE  main.cpp  readme.txt  script.sh
detection/: dataset_merge.py
detection/CSRNet/: dilated_gauss.prototxt  pythonlayer.py  pythonlayer_0.py  solver.prototxt  train.sh
detection/CSRNet/dilated_proto/: dilated.ptototxt  dilated_1.prototxt
detection/MXNet2Caffe/: find_caffe.py  json2prototxt.py  model.prototxt  mxnet2caffe.py  readcaffemodel.py
detection/crowed_bn_json/: pythonLayer.py  renliu_dataset.py  run.sh  solver.prototxt  test_crowd.py  text_dataset.py  train-sh.txt  train-sy.txt  train.txt  val-sh.txt  val-sy.txt  val.txt
detection/crowed_no_bn/: Muti_crowd_nobn.prototxt  deploy_nobn.prototxt  pythonlayer.py  solver.prototxt  test_crowd.py  test_label.txt  train.sh  train_label.txt
detection/dpv2/: deeplabV2.sh  deeplabV2_deploy.prototxt  merge.txt  solver_train_aug.prototxt  train_train_aug.prototxt
detection/faster/: CMakeLists.txt  d_train.prototxt  double_input_layer.py  faster_input_layer.py  main.cpp  train.prototxt
detection/humanAttri/: cut_train.prototxt  deploy.prototxt  pythonLayer.py  run.sh  solver_person_re_ID.prototxt  testLayer.py  train.prototxt  train.txt
detection/mtcnn-caffe/: disk.txt  estdet2.py  main.cpp  mtcnn.hpp  testdet.py
detection/mtcnn-caffe/12net/: pythonLayer.py  runcaffe.sh  solver.prototxt  train12.prototxt
detection/mtcnn-caffe/24net/: pythonLayer.py  pythonLayer_old.py  train24.prototxt  train24_kkk.prototxt  train24_original.prototxt
detection/mtcnn-caffe/demo/: test.py  (+5 more)
detection/ssd-face/: FPNdeploy.prototxt  FPNrun.sh  FPNsolver.prototxt  FPNtrain.prototxt  create_data.sh  labelmap_voc.prototxt  main.cpp  ssd.cpp  ssd.hpp
detection/ssdtrain/: cpalldata.py  main.cpp
detection/ssh/: CMakeLists.txt  main.cpp
detection/tools/: b.py  c.py  clip&border.py  cmakexml.py  copy.py  display.py  json2txt.py  regress.py  remove.py
detection/tz/: CMakeLists.txt
detection/tz/include/: common.h  tuzhenalginterface.hpp  tuzhenfeature.h
detection/tz/samples/: CMakeLists.txt  CMakeLists.txt.in  CvxText.cpp  CvxText.h  PutChineseToMat.cpp  PutChineseToMat.h  analysis_demo.cpp  dependencies.cmake.in  face_attr_unit_test.cpp  face_landmark_predict_test.cpp  face_reid_accuracy_test.cpp  face_reid_pair_test.cpp  feature_cal_demo.cpp  keypoints_data_collector.cpp  keypoints_draw.cpp  load_model_test.cpp  model_load_test.cpp  rsv_demo.cpp
detection/tz/source/: CMakeLists.txt  tuzhenalginterface.cpp  version.h  version.h.in
detection/tz/source/compare/: Compare.cpp  Compare.h  CompareApi.cpp  CompareCpu.cpp  CompareCpu.h  CompareGpu.cpp  CompareGpu.h  CompareMultiCpu.cpp  CompareMultiCpu.h  obj_reid_feat.prototxt
detection/tz/source/crowd/: CrowdEstimate.cpp  CrowdEstimate.h  crowd.cpp  crowd.h
detection/tz/source/getstructfeature/: FaceLandmarkPrediction.cpp  FaceLandmarkPrediction.h  face_interface.cpp  face_interface.h  ssd.cpp  ssd.hpp
detection/tz/source/mask_rcnn/: CMakeLists.txt  MaskRCNNDetector.cpp  MaskRCNNDetector.h  api.hpp  frcnn_api.cpp  frcnn_api.hpp  frcnn_bbox.cpp  frcnn_bbox_transform.cpp  frcnn_config.cpp  frcnn_file.cpp  frcnn_helper.hpp  frcnn_param.cpp  frcnn_utils.hpp  rpn_api.hpp
detection/tz/source/mtcnn/: mtcnn.cpp
detection/tz/source/openpose/: CMakeLists.txt  dependencies.cmake.in  fastMath.hpp  main.cpp  openposeCaffe.cpp  openposeCaffe.hpp  openposeConnector.cpp  openposeConnector.hpp  openposeNms.cu  openposeNms.hpp  openposeResize.cu  openposeResize.hpp  openpose_face.cpp  openpose_face.hpp  property.cpp  property.hpp
detection/tz/source/pedestrain_analysis/: PedestrainAnalysis.cpp  PedestrainAnalysis.h
detection/tz/source/reIDfeature/: face_re_id.cpp  face_re_id.hpp  person_re_id.cpp  person_re_id.hpp  person_re_id_v2.cpp  person_re_id_v2.hpp  rectification.hpp
detection/tz/source/remove_same_video/: ZBase64.cpp  ZBase64.h  rsv.cpp
detection/tz/source/track/: PedestrainTracker.cpp  PedestrainTracker.h  VehicleTracker.cpp  VehicleTracker.h  graph_min_cut_assign.cpp  graph_min_cut_assign.hpp  trackNet.cpp  trackNet.h  tracker.cpp  tracker.hpp
detection/tz/source/track/3rd/: matrix.h  matrix_impl.h  munkres.h  munkres_impl.h
detection/tz/source/vehicle_analysis/: PlateDetector.cpp  PlateDetector.h  VehicleAnalysis.cpp  VehicleAnalysis.h  car_type_color.cpp  car_type_color.h  detectPlate.cpp  detectPlate.hpp  logodet.h  plateApi.cpp  plateApi.hpp  recognizePlate.cpp  recognizePlate.hpp
detection/tz/src-removed/: compare.cpp  getstructfeature.cpp  getstructfeature.hpp  humanAttribute.cpp  humanAttribute.hpp  obj_reid_feat.prototxt.pb.cc  obj_reid_feat.prototxt.pb.h  object_detector.cpp  object_detector.h  track.cpp  track.hpp
detection/yolo/: object_detector.cpp  object_detector.h
facereg/: make_list.py  shuffle.py
facereg/benchmark/: CMakeLists.txt  face_reid_caffe.cpp  face_reid_caffe.hpp  main.cpp  simple_caffe.hpp
facereg/code/: dataset.py  model.py  resnet_utils.py  resnet_v1.py  train.py
facereg/cov_to_caffe/: convert2.py  resnet_50.prototxt
facereg/insightface/: ResNet_feature.py  batch_mxResNet_feature.py  bulk_eval_para.py  change_noises.py  generate_facescrub_zhfyuan.py  mxResNet_feature.py  property  test.lst  writeImg.py
facereg/zhi/: CMakeLists.txt  face_compare_interface.hpp
facereg/zhi/include/: zhihui_alg_interface.hpp
facereg/zhi/src/: CMakeLists.txt  face_compare_interface.cpp
facereg/zhi/src/ZBase64/: ZBase64.cpp
facereg/zhi/src/compare/: face_re_id.cpp  face_re_id.hpp  rectification.hpp
facereg/zhi/src/include/: version.h  version.h.in
facereg/zhi/src/mtcnn/: mtcnn.cpp
facereg/zhi/test/: test.cpp
lib/datasets/: pascal_voc.py
lib/fast_rcnn/: config.py
lib/pycocotools/: _mask.c
lib/rpn/: anchor_target_layer.py  generate.py  proposal_layer.py  proposal_layer_eye.py  proposal_target_layer.py
ocr/: deploy.prototxt  run.sh  train.prototxt  train.txt  train_org.prototxt
ocr/caffe-ocr/: CMakeLists.txt  Makefile  Makefile.config  readme.txt
tzAl/: CMakeLists.txt  facedetermine.hpp  main.cpp  mtcnn.cpp  mtcnn.hpp
(+2545 files in other folders)
