cmake_minimum_required(VERSION 2.8)
add_compile_options(-std=c++11)

#set(CMAKE_BUILD_TYPE "Debug")
#set(CMAKE_BUILD_TYPE Release)
#set(CMAKE_BUILD_TYPE Debug)
set(VERSION_MAJOR 2)
set(VERSION_MINER 5)
set(VERSION_PATCH 0)

SET(CMAKE_CXX_FLAGS_DEBUG "$ENV{CXXFLAGS} -O0 -Wall -g -ggdb")
SET(CMAKE_CXX_FLAGS_RELEASE "$ENV{CXXFLAGS} -O3 -Wall")

include_directories(${CMAKE_SOURCE_DIR}/3rdParty/opencv-3.2.0/include)
include_directories(${CMAKE_SOURCE_DIR}/3rdParty/caffe/include)
include_directories(${CMAKE_SOURCE_DIR}/3rdParty)
include_directories(${CMAKE_SOURCE_DIR}/3rdParty/protobuf/include)
#include_directories(/work/dev/opensource/caffe/include)
#include_directories(${CMAKE_SOURCE_DIR}/3rdParty/darknet/include)
include_directories(/usr/local/include)
include_directories(${CMAKE_SOURCE_DIR}/source/include)
#include_directories(${CMAKE_SOURCE_DIR}/3rdParty/caffe/build/src)
#link_directories(${CMAKE_SOURCE_DIR}/3rdParty/caffe/build/lib)
#link_directories(${CMAKE_SOURCE_DIR}/3rdParty/protobuf/lib)
#link_directories(/work/dev/opensource/caffe/build/lib)
link_directories(${CMAKE_SOURCE_DIR}/3rdParty/protobuf/lib)
link_directories(${CMAKE_SOURCE_DIR}/3rdParty/cairo/lib)
link_directories(${CMAKE_SOURCE_DIR}/3rdParty/freetype /lib)
link_directories(${CMAKE_SOURCE_DIR}/3rdParty/opencv-3.2.0/lib)
#link_directories(${CMAKE_SOURCE_DIR}/3rdParty/darknet/lib)
link_directories(${CMAKE_SOURCE_DIR}/lib)
include_directories(/usr/local/cuda/include)
link_directories("/usr/local/cuda/lib64")

add_subdirectory(source lib)
add_subdirectory(samples bin)

#ADD_DEFINITIONS(-DDEBUG)
#if( CMAKE_BUILD_TYPE STREQUAL "Debug" )
#    set(CMAKE_C_FLAGS_DEBUG "-DDEBUG")
#    set(CMAKE_CXX_FLAGS_DEBUG "-DDEBUG")
#endif( CMAKE_BUILD_TYPE STREQUAL "Debug" )

#if (CMAKE_BUILD_TYPE STREQUAL Debug)
#    add_definitions(
#            -D_DEBUG
#    )
#endif ()
if (NOT CMAKE_BUILD_TYPE MATCHES Debug)
    add_definitions(-DNDEBUG)
endif()

install (FILES ${CMAKE_SOURCE_DIR}/CMakeLists.sdk.sample.txt DESTINATION ./ RENAME "CMakeLists.txt")
#install(DIRECTORY ${CMAKE_SOURCE_DIR}/3rdParty/ DESTINATION 3rdParty FILES_MATCHING PATTERN "*.*")
install(DIRECTORY ${CMAKE_SOURCE_DIR}/lib/ DESTINATION lib FILES_MATCHING PATTERN "*.*")
install (DIRECTORY ${CMAKE_SOURCE_DIR}/include/ DESTINATION include FILES_MATCHING PATTERN "*.*")
SET(CMAKE_INSTALL_PREFIX ${CMAKE_SOURCE_DIR}/install)
